<resources>
    <string name="app_name">MessangerMix</string>
    <string name="messanger">Messanger</string>
    <string name="your_email">Your email:</string>
    <string name="your_password">Your password:</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="name">Name:</string>
    <string name="last_name">Last name:</string>
    <string name="age">Age:</string>
    <string name="sing_up">Sing up</string>
    <string name="reset_password_activity">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="logout">Logout</string>
    <string name="the_reset_link_has_been_successfull_sent">The reset link has been successfull sent</string>
    <string name="type_your_message">Type your message:</string>
</resources>